Update executable name
pp -> persistent-th-rewrite-pp

--- a/persistent-th-rewrite.cabal
+++ b/persistent-th-rewrite.cabal
@@ -27,7 +27,7 @@ build-type:
 extra-source-files:
   CHANGELOG.md
 
-executable pp
+executable persistent-th-rewrite-pp
   main-is:
     Main.hs
   hs-source-dirs:
